Fixed misalignment in 'help' and 'advanced search'

--- a/app/webroot/css/layouts/default.css
+++ b/app/webroot/css/layouts/default.css
@@ -406,6 +406,7 @@ rt {
 .search-bar-extra {
     text-align: right;
     padding-right: 2px;
+    padding-bottom: 2px;
 }
 .search-bar-extra a {
     color: #FFFFFF;
